# HotelOnboardingBackEndCalculations

./: .gitignore  Project Plan Template - English v1.0.docx  Projectplan Template - English v3.docx  Projectplan_latest-01-03.docx  Projectplan_latest-11-12.docx  QuestionsForRoy.txt  README.md  ~$ojectplan Template - English v3.docx
Analysis/: Approval internship-graduation assignment-1.docx  Base notes.docx  Genzai - ViaLuxury - Design and build back-end and calculations for hotel onboarding process.docx  Meeting1Notes.txt  Meeting2Notes.txt  NotesAlbaBart.txt  SRSOnboardingProcess.doc  UseCaseDescriptionsTemplate.md  User Stories.docx  ~$proval internship-graduation assignment-1.docx  ~$se notes.docx
Design/Back-end plan notes/: BackEndToolsAndConnection.txt
Design/Database Design/: BasFeedback.txt  DBSchema purpose.txt  DBSchema.vpp  ERDiagram.vpd  InitERDiag.vpp  OldERDiag.erd  QuestionsForBas.txt  questions.txt
Design/UseCaseDiagrams/: UseCaseDiagramHotelOnboarding.vpp
dummyImplementation/: pyproject.toml
dummyImplementation/domain/: exampleObj.py
dummyImplementation/infrastructure/: todoEntriesRepository.py
fastAPIImpl/: container.py  main.py  pyproject.toml
fastAPIImpl/application/: TodoService.py  todo_service.py
fastAPIImpl/domain/: TodoEntry.py  exampleObj.py  todo_entry_repository.py
fastAPIImpl/infrastructure/api/: setup.py  todo_controller.py  todo_schema.py
fastAPIImpl/infrastructure/database/: test_todo_entry_repository.py  todo_entry_repository.py
