[tool.poetry]
name = "application"
version = "0.1.0"
description = ""
authors = ["Svetoslav Stoyanov <426911@student.fontys.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
dependency-injector = "^4.41.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
